--- a/src/app/features/inventory/inventory.scss
+++ b/src/app/features/inventory/inventory.scss
@@ -5,6 +5,10 @@
     font-weight: 600;
   }
 
+  &__table-wrapper {
+    overflow-x: auto;
+  }
+
   &__table {
     width: 100%;
   }
